--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ html.transition *:after {
 	position: relative;
 	display: flex;
 	width: 100%;
-	height: 50px;
+	/* height: 50px; */
 	min-height: 100px;
 	align-items: center;
 	justify-content: space-between;
@@ -297,6 +297,7 @@ html.transition *:after {
 	.navbar {
 		display: flex;
 		flex-direction: column;
+		margin-bottom: 10px;
 	}
 	.main__area h2 {
 		font-size: 40px;
@@ -352,7 +353,6 @@ html.transition *:after {
 .register,
 .login {
 	background-color: var(--primary);
-	height: 100vh;
 }
 .register__card,
 .login__card {
@@ -360,10 +360,7 @@ html.transition *:after {
 	height: auto;
 	padding: 15px;
 	background-color: var(--secondary);
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	margin: 0 auto;
 	border-radius: 3px;
 	box-shadow: 0 16px 28px 0 rgb(0 0 0 / 22%), 0 25px 55px 0 rgb(0 0 0 / 21%);
 }
